--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-click==5.1
-marshmallow==2.15.1
-matplotlib==1.4.3
+Click==7.0
+marshmallow==2.19.5
+matplotlib==3.0.3
 nose==1.3.7
-numpy==1.10.1
-pinky==0.0.2
-scipy==0.16.1
+numpy==1.16.4
+pinky==0.0.3
+scipy==1.3.0
